--- a/indexes/nsc993/61.md
+++ b/indexes/nsc993/61.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】习近平可能被宫廷政变推翻吗？](../../pages/nsc993/n13209876.md) 
+#### [李春草：卜算子·韭菜花](../../pages/nsc993/n13209894.md) 
+#### [祝君安：文革来了，卸磨还会远吗？](../../pages/nsc993/n13209892.md) 
 #### [【网海拾贝】美国最大规模演习发出的讯号](../../pages/nsc993/n13207637.md) 
 #### [【网海拾贝】西方对中共的误判与中共对西方的误判](../../pages/nsc993/n13204854.md) 
 #### [国学大师季羡林关于文革的四个“天问”](../../pages/nsc993/n13204917.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】阿富汗将变成谁的坟场？](../../pages/nsc993/n13183968.md) 
 #### [千百度：疫情防控中，扬州人绝望麻木的生活](../../pages/nsc993/n13183902.md) 
 #### [袁斌：“8月5日打的疫苗，8月9日人就走了”](../../pages/nsc993/n13183741.md) 
-#### [请世界各国首脑重温列宁的“绳套”](../../pages/nsc993/n13183266.md) 
-#### [陈达：中共“代表阿富汗人民”解](../../pages/nsc993/n13183050.md) 
-#### [谢燕益：就许娜案致北京市政法委书记](../../pages/nsc993/n13182701.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
