have a nice day!

--- a/indexes/nsc1025/127.md
+++ b/indexes/nsc1025/127.md
@@ -1,5 +1,16 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】人民币国际化进展缓慢](../../pages/nsc1025/n13212061.md) 
+#### [【名家专栏】中共大外宣：控制境外华人媒体](../../pages/nsc1025/n13212035.md) 
+#### [田云：中共政法系统大清洗之三点解读](../../pages/nsc1025/n13211062.md) 
+#### [李正宽：赵薇陷政治漩涡 后台大佬浮出水](../../pages/nsc1025/n13211204.md) 
+#### [谭笑飞：中共正在原路返回](../../pages/nsc1025/n13211145.md) 
+#### [甑东舟：“小燕子”入笼，幕里幕外都是戏](../../pages/nsc1025/n13210862.md) 
+#### [【名家专栏】妖魔化美国历史不会带来进步](../../pages/nsc1025/n13210198.md) 
+#### [【名家专栏】警惕中共借鉴9‧11用于军事冲突](../../pages/nsc1025/n13210307.md) 
+#### [【名家专栏】投资中国的风险](../../pages/nsc1025/n13210304.md) 
+#### [颜丹：中国疫苗在国外大卖？](../../pages/nsc1025/n13210768.md) 
+#### [岳山：习吐露四个心事 忧中青年党官“躺平”](../../pages/nsc1025/n13206959.md) 
 #### [中共东部战区可能对台湾造成什么威胁？](../../pages/nsc1025/n13209445.md) 
 #### [陈思敏：习近平宣布设立北京证券交易所的背后](../../pages/nsc1025/n13209947.md) 
 #### [觅真：中共末日疯狂 迫害好人无底线](../../pages/nsc1025/n13209658.md) 
@@ -19,17 +30,6 @@
 #### [谢田：美中阿富汗困境与亨廷顿的遗珠](../../pages/nsc1025/n13206111.md) 
 #### [【有冇搞错】中国周边紧张 冲突一触即发](../../pages/nsc1025/n13203646.md) 
 #### [石铭：河北衡水多名官员遭恶报在告诉人们什么？](../../pages/nsc1025/n13204729.md) 
-#### [钟原：习近平给干部训话 “要有敬畏心”](../../pages/nsc1025/n13204213.md) 
-#### [王友群：如何看王沪宁力推的一篇“重磅文章”](../../pages/nsc1025/n13203874.md) 
-#### [乾元：李光满的“大字报”会成为文革2.0的前奏吗？](../../pages/nsc1025/n13204063.md) 
-#### [王赫：中央民族工作会议曝中共深层恐惧](../../pages/nsc1025/n13203944.md) 
-#### [陈思敏：中国制造业两大难题中共难破解](../../pages/nsc1025/n13203496.md) 
-#### [【名家专栏】企业高管到底关注社会正义吗？](../../pages/nsc1025/n13202940.md) 
-#### [杨威：秦刚谈中美关系暗示闭关锁国？](../../pages/nsc1025/n13203619.md) 
-#### [周晓辉：六中全会召开日期确定  要为中共盖棺？](../../pages/nsc1025/n13203628.md) 
-#### [【纪元专栏】强制师生打疫苗 多元尊重无从谈起](../../pages/nsc1025/n13203702.md) 
-#### [袁斌：官媒齐转毛左文章 新文革开始的信号](../../pages/nsc1025/n13202207.md) 
-#### [李正宽：中纪委插手娱乐圈 背后藏何玄机？](../../pages/nsc1025/n13202149.md) 
 
 ---
-#### 第 [ [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) / [119](./119.md) ] 页
+#### 第 [ [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) ] 页
