--- a/indexes/nsc993/61.md
+++ b/indexes/nsc993/61.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中国富豪疯狂捐款的背后](../../pages/nsc993/n13211297.md) 
+#### [田雨木：从最新科学测试看辩证唯物主义之谬](../../pages/nsc993/n13210926.md) 
 #### [【网海拾贝】习近平可能被宫廷政变推翻吗？](../../pages/nsc993/n13209876.md) 
 #### [李春草：卜算子·韭菜花](../../pages/nsc993/n13209894.md) 
 #### [祝君安：文革来了，卸磨还会远吗？](../../pages/nsc993/n13209892.md) 
@@ -28,8 +30,6 @@
 #### [新州：大疫何日止？中共灭亡时](../../pages/nsc993/n13186301.md) 
 #### [专访李沐阳：以诚相待 将心比心](../../pages/nsc993/n13180171.md) 
 #### [【网海拾贝】阿富汗将变成谁的坟场？](../../pages/nsc993/n13183968.md) 
-#### [千百度：疫情防控中，扬州人绝望麻木的生活](../../pages/nsc993/n13183902.md) 
-#### [袁斌：“8月5日打的疫苗，8月9日人就走了”](../../pages/nsc993/n13183741.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
