have a nice day!

--- a/indexes/nsc1025/127.md
+++ b/indexes/nsc1025/127.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [沈舟：二十大提前布局 军队将领大变动](../../pages/nsc1025/n13215036.md) 
+#### [洪博：中共无法无天 8月份再有159万人三退](../../pages/nsc1025/n13213910.md) 
+#### [慕岳：浙江官员纷纷“自愿捐款”的背后](../../pages/nsc1025/n13213260.md) 
+#### [钟原：中共党媒急报功却泄漏疫情真相](../../pages/nsc1025/n13212899.md) 
+#### [唐青：习乱箭齐发有内幕 共同富裕冲击江派大佬](../../pages/nsc1025/n13212551.md) 
+#### [【名家专栏】从阿富汗撤军 谁得益？](../../pages/nsc1025/n13211997.md) 
+#### [周晓辉： 第一财经文被速删 或涉高层博弈](../../pages/nsc1025/n13212294.md) 
 #### [【名家专栏】人民币国际化进展缓慢](../../pages/nsc1025/n13212061.md) 
 #### [【名家专栏】中共大外宣：控制境外华人媒体](../../pages/nsc1025/n13212035.md) 
 #### [田云：中共政法系统大清洗之三点解读](../../pages/nsc1025/n13211062.md) 
@@ -23,13 +30,6 @@
 #### [慕岳：百年变局 习近平是在开盘还是收官？](../../pages/nsc1025/n13206516.md) 
 #### [李正宽：习近平磨刀多日 曾庆红寝食难安](../../pages/nsc1025/n13206153.md) 
 #### [杨威：拜登还会为习近平“背书”吗？](../../pages/nsc1025/n13206546.md) 
-#### [王友群：中纪委为何又批“攫取党和国家权力”](../../pages/nsc1025/n13206384.md) 
-#### [【名家专栏】谨慎对待美国房地产界的喧嚣](../../pages/nsc1025/n13205447.md) 
-#### [颜丹：说说“美国已经不是中国留学生首选”](../../pages/nsc1025/n13206297.md) 
-#### [【名家专栏】是美国该反省的时候了](../../pages/nsc1025/n13205426.md) 
-#### [谢田：美中阿富汗困境与亨廷顿的遗珠](../../pages/nsc1025/n13206111.md) 
-#### [【有冇搞错】中国周边紧张 冲突一触即发](../../pages/nsc1025/n13203646.md) 
-#### [石铭：河北衡水多名官员遭恶报在告诉人们什么？](../../pages/nsc1025/n13204729.md) 
 
 ---
 #### 第 [ [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) ] 页
