--- a/indexes/nsc1035/52.md
+++ b/indexes/nsc1035/52.md
@@ -1,5 +1,7 @@
 ### 纪元评论：感悟随笔
 ---
+#### [祥瑞：躺平人的选择与《归途》的一步之遥](../../pages/nsc1035/n13213201.md) 
+#### [清荷：祸福皆自前因](../../pages/nsc1035/n13213177.md) 
 #### [乐评：抹不去的纪念——倾听大雄《无名之辈无所适从》](../../pages/nsc1035/n13163359.md) 
 #### [黄翔：宇宙时空岩文（之二）](../../pages/nsc1035/n13141116.md) 
 #### [黄翔：宇宙时空岩文（之一）](../../pages/nsc1035/n13140355.md) 
@@ -28,8 +30,6 @@
 #### [跨时空智慧：古老中国的自我提高艺术](../../pages/nsc1035/n12988506.md) 
 #### [陈大民：真正的自由需要人人回馈](../../pages/nsc1035/n12990148.md) 
 #### [今年的阵亡将士纪念日：自由的新生](../../pages/nsc1035/n12989540.md) 
-#### [阵亡将士纪念日：铭记那些献出生命的人](../../pages/nsc1035/n12985418.md) 
-#### [影评《抉择》 经历了这一切，当中国人还值得吗？](../../pages/nsc1035/n12983029.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
