--- a/indexes/nsc1028/55.md
+++ b/indexes/nsc1028/55.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之四十九：川大最后一个“右派”](../../pages/nsc1028/n13216206.md) 
 #### [王友群：中共高级特工潘汉年被监禁至死之谜](../../pages/nsc1028/n13210760.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（5）](../../pages/nsc1028/n13209835.md) 
 #### [告别进化论](../../pages/nsc1028/n13196066.md) 
@@ -29,7 +30,6 @@
 #### [王友群：林彪之子林立果痛斥毛泽东为暴君](../../pages/nsc1028/n13128622.md) 
 #### [中共罪行录之四十三：名字惹的祸](../../pages/nsc1028/n13115989.md) 
 #### [王友群：被整得最惨的中共元帅彭德怀](../../pages/nsc1028/n13112821.md) 
-#### [中共罪行录之四十二：语录对错招来祸](../../pages/nsc1028/n13113015.md) 
 
 ---
 #### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
