have a nice day!

--- a/indexes/nsc1025/128.md
+++ b/indexes/nsc1025/128.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [王友群：习近平频换军队将领透四大信息](../../pages/nsc1025/n13220098.md) 
+#### [周晓辉：推行贿人黑名单制度 北京当局意欲何为？](../../pages/nsc1025/n13219971.md) 
+#### [【名家专栏】美国防部为何同意从阿富汗撤军？](../../pages/nsc1025/n13219469.md) 
+#### [何清涟：“中国模式”正在影响美国经济政策](../../pages/nsc1025/n13218664.md) 
+#### [林忌：“限籍令”的奇妙排外逻辑](../../pages/nsc1025/n13218643.md) 
+#### [王友群：中共打压立陶宛 欧盟三大连锁反应](../../pages/nsc1025/n13217892.md) 
 #### [【名家专栏】我们该如何应对气候变化？](../../pages/nsc1025/n13217109.md) 
 #### [【名家专栏】中共用电子游戏诱惑美国青年](../../pages/nsc1025/n13217044.md) 
 #### [唐青：金人庆许永跃十大老虎涉公共情妇门](../../pages/nsc1025/n13217535.md) 
@@ -24,12 +30,6 @@
 #### [田云：中共政法系统大清洗之三点解读](../../pages/nsc1025/n13211062.md) 
 #### [李正宽：赵薇陷政治漩涡 后台大佬浮出水](../../pages/nsc1025/n13211204.md) 
 #### [谭笑飞：中共正在原路返回](../../pages/nsc1025/n13211145.md) 
-#### [甑东舟：“小燕子”入笼，幕里幕外都是戏](../../pages/nsc1025/n13210862.md) 
-#### [【名家专栏】妖魔化美国历史不会带来进步](../../pages/nsc1025/n13210198.md) 
-#### [【名家专栏】警惕中共借鉴9‧11用于军事冲突](../../pages/nsc1025/n13210307.md) 
-#### [【名家专栏】投资中国的风险](../../pages/nsc1025/n13210304.md) 
-#### [颜丹：中国疫苗在国外大卖？](../../pages/nsc1025/n13210768.md) 
-#### [岳山：习吐露四个心事 忧中青年党官“躺平”](../../pages/nsc1025/n13206959.md) 
 
 ---
-#### 第 [ [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) ] 页
+#### 第 [ [128](./128.md) / [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) ] 页
