--- a/indexes/nsc1025/128.md
+++ b/indexes/nsc1025/128.md
@@ -1,5 +1,17 @@
 ### 纪元评论：时政评论
 ---
+#### [何冰：华尔街与中共的关系和走向](../../pages/nsc1025/n13220473.md) 
+#### [谢田：拜登策略扑朔迷离 美国商界纠结无语](../../pages/nsc1025/n13222521.md) 
+#### [【有冇搞错】阿富汗自古就产恐怖主义](../../pages/nsc1025/n13220267.md) 
+#### [夏林：加国大选各政党 对人权和中共政策有哪些？](../../pages/nsc1025/n13222083.md) 
+#### [陈思敏：西部战区频换将 背后涉肃清郭徐流毒？](../../pages/nsc1025/n13221458.md) 
+#### [石铭：教师节谈部分教师们的悲惨遭遇](../../pages/nsc1025/n13221415.md) 
+#### [项云：中共的“共同富裕”没有可信度](../../pages/nsc1025/n13221354.md) 
+#### [王赫：习近平如何布局下届军委？](../../pages/nsc1025/n13220767.md) 
+#### [程晓农：白宫两任国安团队的中共认知](../../pages/nsc1025/n13220405.md) 
+#### [【名家专栏】中国供应链面临严峻挑战](../../pages/nsc1025/n13219486.md) 
+#### [【名家专栏】索罗斯看中国 十年大不相同](../../pages/nsc1025/n13219467.md) 
+#### [岳山：中南海抢钱计划遇反弹 内外灭火忙](../../pages/nsc1025/n13220103.md) 
 #### [王友群：习近平频换军队将领透四大信息](../../pages/nsc1025/n13220098.md) 
 #### [周晓辉：推行贿人黑名单制度 北京当局意欲何为？](../../pages/nsc1025/n13219971.md) 
 #### [【名家专栏】美国防部为何同意从阿富汗撤军？](../../pages/nsc1025/n13219469.md) 
@@ -18,18 +30,6 @@
 #### [王友群：黑天鹅突降天安门 中南海有大震荡？](../../pages/nsc1025/n13215240.md) 
 #### [周晓辉：黑天鹅降落天安门广场 危机将至？](../../pages/nsc1025/n13214981.md) 
 #### [【名家专栏】美军撤出阿富汗 中共能取代吗？](../../pages/nsc1025/n13214436.md) 
-#### [沈舟：二十大提前布局 军队将领大变动](../../pages/nsc1025/n13215036.md) 
-#### [洪博：中共无法无天 8月份再有159万人三退](../../pages/nsc1025/n13213910.md) 
-#### [慕岳：浙江官员纷纷“自愿捐款”的背后](../../pages/nsc1025/n13213260.md) 
-#### [钟原：中共党媒急报功却泄漏疫情真相](../../pages/nsc1025/n13212899.md) 
-#### [唐青：习乱箭齐发有内幕 共同富裕冲击江派大佬](../../pages/nsc1025/n13212551.md) 
-#### [【名家专栏】从阿富汗撤军 谁得益？](../../pages/nsc1025/n13211997.md) 
-#### [周晓辉： 第一财经文被速删 或涉高层博弈](../../pages/nsc1025/n13212294.md) 
-#### [【名家专栏】人民币国际化进展缓慢](../../pages/nsc1025/n13212061.md) 
-#### [【名家专栏】中共大外宣：控制境外华人媒体](../../pages/nsc1025/n13212035.md) 
-#### [田云：中共政法系统大清洗之三点解读](../../pages/nsc1025/n13211062.md) 
-#### [李正宽：赵薇陷政治漩涡 后台大佬浮出水](../../pages/nsc1025/n13211204.md) 
-#### [谭笑飞：中共正在原路返回](../../pages/nsc1025/n13211145.md) 
 
 ---
 #### 第 [ [128](./128.md) / [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) ] 页
