have a nice day!

--- a/indexes/nsc1025/129.md
+++ b/indexes/nsc1025/129.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [钟原：习近平与默克尔通话 党媒曝分歧](../../pages/nsc1025/n13225076.md) 
+#### [【名家专栏】北欧不等于大政府或高额企业税](../../pages/nsc1025/n13224518.md) 
 #### [【名家专栏】必须制止中共的跨国镇压](../../pages/nsc1025/n13224394.md) 
 #### [李正宽：升级迫害法轮功 中共的诡秘机器与陷阱](../../pages/nsc1025/n13223775.md) 
 #### [王赫：三大军事动向 中共野心暴露无疑](../../pages/nsc1025/n13223883.md) 
@@ -28,8 +30,6 @@
 #### [周晓辉：推行贿人黑名单制度 北京当局意欲何为？](../../pages/nsc1025/n13219971.md) 
 #### [【名家专栏】美国防部为何同意从阿富汗撤军？](../../pages/nsc1025/n13219469.md) 
 #### [何清涟：“中国模式”正在影响美国经济政策](../../pages/nsc1025/n13218664.md) 
-#### [林忌：“限籍令”的奇妙排外逻辑](../../pages/nsc1025/n13218643.md) 
-#### [王友群：中共打压立陶宛 欧盟三大连锁反应](../../pages/nsc1025/n13217892.md) 
 
 ---
-#### 第 [ [128](./128.md) / [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) ] 页
+#### 第 [ [129](./129.md) / [128](./128.md) / [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) ] 页
