--- a/indexes/nsc1028/55.md
+++ b/indexes/nsc1028/55.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [无神论——人类面临的最危险骗局](../../pages/nsc1028/n13196137.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（6）](../../pages/nsc1028/n13221126.md) 
 #### [中共罪行录之五十：同仁堂的故事](../../pages/nsc1028/n13218798.md) 
 #### [中共罪行录之四十九：川大最后一个“右派”](../../pages/nsc1028/n13216206.md) 
@@ -29,7 +30,6 @@
 #### [中共罪行录之四十五：“阴阳头”和“喷气式”](../../pages/nsc1028/n13132408.md) 
 #### [中共罪行录之四十四：“红色恐怖万岁”](../../pages/nsc1028/n13130302.md) 
 #### [【名家专栏】《西游记》教我们认清中共欺骗](../../pages/nsc1028/n13129563.md) 
-#### [王友群：林彪之子林立果痛斥毛泽东为暴君](../../pages/nsc1028/n13128622.md) 
 
 ---
 #### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
