--- a/indexes/nsc993/62.md
+++ b/indexes/nsc993/62.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】人民日报捧李光满 为何又抽他一记耳光](../../pages/nsc993/n13224062.md) 
 #### [【网海拾贝】“大国崛起”后继无人了](../../pages/nsc993/n13221320.md) 
 #### [【网海拾贝】刘强东在重演他太爷爷的故事](../../pages/nsc993/n13218844.md) 
 #### [【网海拾贝】黑天鹅降临天安门，对中共是祸是福？](../../pages/nsc993/n13216283.md) 
@@ -29,7 +30,6 @@
 #### [醒脑汤：中共，你活的真累](../../pages/nsc993/n13190907.md) 
 #### [李春草：所谓幸福，在党一方](../../pages/nsc993/n13190320.md) 
 #### [【网海拾贝】大额存款取不取出 今后领导说了算](../../pages/nsc993/n13188867.md) 
-#### [袁斌：共青团官博捧塔嘲美 网友：反美反魔怔了](../../pages/nsc993/n13188756.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
