have a nice day!

--- a/indexes/nsc1025/129.md
+++ b/indexes/nsc1025/129.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】叶望辉：9‧11并未改变一切](../../pages/nsc1025/n13226366.md) 
+#### [陈思敏：广东退休虎被查 官媒矛头遥指江派大佬？](../../pages/nsc1025/n13226066.md) 
+#### [梁文韬：中共要彻底摧毁香港公民社会](../../pages/nsc1025/n13225742.md) 
+#### [【名家专栏】媒体如何造就根深蒂固的偏见](../../pages/nsc1025/n13224469.md) 
 #### [钟原：习近平与默克尔通话 党媒曝分歧](../../pages/nsc1025/n13225076.md) 
 #### [【名家专栏】北欧不等于大政府或高额企业税](../../pages/nsc1025/n13224518.md) 
 #### [【名家专栏】必须制止中共的跨国镇压](../../pages/nsc1025/n13224394.md) 
@@ -26,10 +30,6 @@
 #### [【名家专栏】中国供应链面临严峻挑战](../../pages/nsc1025/n13219486.md) 
 #### [【名家专栏】索罗斯看中国 十年大不相同](../../pages/nsc1025/n13219467.md) 
 #### [岳山：中南海抢钱计划遇反弹 内外灭火忙](../../pages/nsc1025/n13220103.md) 
-#### [王友群：习近平频换军队将领透四大信息](../../pages/nsc1025/n13220098.md) 
-#### [周晓辉：推行贿人黑名单制度 北京当局意欲何为？](../../pages/nsc1025/n13219971.md) 
-#### [【名家专栏】美国防部为何同意从阿富汗撤军？](../../pages/nsc1025/n13219469.md) 
-#### [何清涟：“中国模式”正在影响美国经济政策](../../pages/nsc1025/n13218664.md) 
 
 ---
 #### 第 [ [129](./129.md) / [128](./128.md) / [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) ] 页
