--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [金言：古代帝王降生有哪些异象？](../../pages/nsc1028/n13226435.md) 
 #### [中共罪行录之五十一：死于文革的著名作家](../../pages/nsc1028/n13225932.md) 
 #### [无神论——人类面临的最危险骗局](../../pages/nsc1028/n13196137.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（6）](../../pages/nsc1028/n13221126.md) 
@@ -29,7 +30,6 @@
 #### [观雨堂主：中共对美国的仇恨永远不会放弃](../../pages/nsc1028/n13149032.md) 
 #### [金言：古代童谣何以预示王朝的灭亡？](../../pages/nsc1028/n13148878.md) 
 #### [中共罪行录之四十五：“阴阳头”和“喷气式”](../../pages/nsc1028/n13132408.md) 
-#### [中共罪行录之四十四：“红色恐怖万岁”](../../pages/nsc1028/n13130302.md) 
 
 ---
-#### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
+#### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
