--- a/indexes/nsc993/62.md
+++ b/indexes/nsc993/62.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [东川子：中国人，你为什么不反抗](../../pages/nsc993/n13225723.md) 
+#### [【网海拾贝】把公鸡杀光天就不会亮了？](../../pages/nsc993/n13225966.md) 
 #### [【网海拾贝】人民日报捧李光满 为何又抽他一记耳光](../../pages/nsc993/n13224062.md) 
 #### [【网海拾贝】“大国崛起”后继无人了](../../pages/nsc993/n13221320.md) 
 #### [【网海拾贝】刘强东在重演他太爷爷的故事](../../pages/nsc993/n13218844.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】躲得过中共病毒，躲不过中共疫苗](../../pages/nsc993/n13191479.md) 
 #### [颜纯钩﻿：浩气贯天，足铭青史——读黄浩铭的“法庭陈情书”](../../pages/nsc993/n13190931.md) 
 #### [醒脑汤：中共，你活的真累](../../pages/nsc993/n13190907.md) 
-#### [李春草：所谓幸福，在党一方](../../pages/nsc993/n13190320.md) 
-#### [【网海拾贝】大额存款取不取出 今后领导说了算](../../pages/nsc993/n13188867.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
