--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【名家专栏】不太惬意的夏日时光](../../pages/nsc1028/n13226398.md) 
+#### [袁斌：我们从小到大学到的历史哪些是假的（7）](../../pages/nsc1028/n13227610.md) 
 #### [金言：古代帝王降生有哪些异象？](../../pages/nsc1028/n13226435.md) 
 #### [中共罪行录之五十一：死于文革的著名作家](../../pages/nsc1028/n13225932.md) 
 #### [无神论——人类面临的最危险骗局](../../pages/nsc1028/n13196137.md) 
@@ -28,8 +30,6 @@
 #### [袁斌：罗素对“俄国革命”的洞见](../../pages/nsc1028/n13159737.md) 
 #### [王友群：北京大学一级教授向达文革被迫害致死](../../pages/nsc1028/n13150966.md) 
 #### [观雨堂主：中共对美国的仇恨永远不会放弃](../../pages/nsc1028/n13149032.md) 
-#### [金言：古代童谣何以预示王朝的灭亡？](../../pages/nsc1028/n13148878.md) 
-#### [中共罪行录之四十五：“阴阳头”和“喷气式”](../../pages/nsc1028/n13132408.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
