have a nice day!

--- a/indexes/nsc1025/129.md
+++ b/indexes/nsc1025/129.md
@@ -1,5 +1,13 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】美国人民的复兴力量](../../pages/nsc1025/n13230189.md) 
+#### [【名家专栏】中共在印度洋扩张的野心](../../pages/nsc1025/n13230240.md) 
+#### [陈思敏：中国机器人市场全球第一 核心技术差距大](../../pages/nsc1025/n13229782.md) 
+#### [周晓辉：拜登延长川普一行政令 北京做何想？](../../pages/nsc1025/n13229727.md) 
+#### [颜丹： 香港议员拒宣誓与大陆官员非正常死亡](../../pages/nsc1025/n13229626.md) 
+#### [慕岳：拜习通话 中共现四大战略误判](../../pages/nsc1025/n13229335.md) 
+#### [王友群：重庆前副市长邓恢林跟谁搞团团伙伙？](../../pages/nsc1025/n13228367.md) 
+#### [沈舟：日本对中共军力的最新评估](../../pages/nsc1025/n13228735.md) 
 #### [【名家专栏】对中共说不的两个国家](../../pages/nsc1025/n13227986.md) 
 #### [杨威：9‧11二十年后 中美关系待重新定义](../../pages/nsc1025/n13228383.md) 
 #### [唐青：午夜密谋 孙政才夺权折戟内幕](../../pages/nsc1025/n13228343.md) 
@@ -22,14 +30,6 @@
 #### [杨威：拜习再通话 中美关系无进展](../../pages/nsc1025/n13223630.md) 
 #### [岳山：中共六中全会三大悬念一个核心](../../pages/nsc1025/n13222741.md) 
 #### [周晓辉：打疫苗后跑步猝死或得白血病谁负责](../../pages/nsc1025/n13222732.md) 
-#### [杨威：中共内斗、仇外会令中国倒退多少年？](../../pages/nsc1025/n13223018.md) 
-#### [【名家专栏】澳大利亚人为何能忍受严厉封锁](../../pages/nsc1025/n13222040.md) 
-#### [【名家专栏】从加州州长选举活动看不同价值观](../../pages/nsc1025/n13222017.md) 
-#### [【名家专栏】残奥会无法实现的双重焦点](../../pages/nsc1025/n13222015.md) 
-#### [王友群：中共群体灭绝犯罪必将受到审判](../../pages/nsc1025/n13222583.md) 
-#### [何冰：华尔街与中共的关系和走向](../../pages/nsc1025/n13220473.md) 
-#### [谢田：拜登策略扑朔迷离 美国商界纠结无语](../../pages/nsc1025/n13222521.md) 
-#### [【有冇搞错】阿富汗自古就产恐怖主义](../../pages/nsc1025/n13220267.md) 
 
 ---
 #### 第 [ [129](./129.md) / [128](./128.md) / [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) ] 页
