--- a/indexes/nsc1026/51.md
+++ b/indexes/nsc1026/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [中国外汇大逃亡：只许州官放火 不许百姓点灯（上）](../../pages/nsc1026/n13228773.md) 
 #### [【美股瞭望】迟来的股市修正年内未必会发生](../../pages/nsc1026/n13223100.md) 
 #### [【谈股论金】美联储缩表意味着什么？](../../pages/nsc1026/n13174610.md) 
 #### [何珊如：滴滴危机——一个鲜活的中国故事](../../pages/nsc1026/n13151962.md) 
@@ -29,7 +30,6 @@
 #### [吴惠林：拍卖理论泰斗](../../pages/nsc1026/n12591360.md) 
 #### [王赫：中国经济“脱实向虚”，病入膏肓](../../pages/nsc1026/n12564946.md) 
 #### [王赫：中国制造业升级，难上加难](../../pages/nsc1026/n12559461.md) 
-#### [吴惠林：如何妥善因应后疫情时代？](../../pages/nsc1026/n12553885.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
