have a nice day!

--- a/indexes/nsc1025/129.md
+++ b/indexes/nsc1025/129.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [颜丹：从美国撒旦教信徒抗议“反堕胎法”说起](../../pages/nsc1025/n13234093.md) 
+#### [【有冇搞错】罢免纽森投票 美国政治正重新平衡](../../pages/nsc1025/n13231358.md) 
+#### [【名家专栏】中共的“盾牌加长矛”战略](../../pages/nsc1025/n13230258.md) 
+#### [李清：疫苗不能控制疫情 数据早现端倪](../../pages/nsc1025/n13231356.md) 
 #### [【名家专栏】美国人民的复兴力量](../../pages/nsc1025/n13230189.md) 
 #### [【名家专栏】中共在印度洋扩张的野心](../../pages/nsc1025/n13230240.md) 
 #### [陈思敏：中国机器人市场全球第一 核心技术差距大](../../pages/nsc1025/n13229782.md) 
@@ -26,10 +30,6 @@
 #### [【名家专栏】必须制止中共的跨国镇压](../../pages/nsc1025/n13224394.md) 
 #### [李正宽：升级迫害法轮功 中共的诡秘机器与陷阱](../../pages/nsc1025/n13223775.md) 
 #### [王赫：三大军事动向 中共野心暴露无疑](../../pages/nsc1025/n13223883.md) 
-#### [袁斌：每个人都能感受到，一场大倒退正在进行！](../../pages/nsc1025/n13223950.md) 
-#### [杨威：拜习再通话 中美关系无进展](../../pages/nsc1025/n13223630.md) 
-#### [岳山：中共六中全会三大悬念一个核心](../../pages/nsc1025/n13222741.md) 
-#### [周晓辉：打疫苗后跑步猝死或得白血病谁负责](../../pages/nsc1025/n13222732.md) 
 
 ---
 #### 第 [ [129](./129.md) / [128](./128.md) / [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) ] 页
