--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：1975年河南溃坝23万人死亡之谜](../../pages/nsc1028/n13231576.md) 
 #### [中共罪行录之五十一：死于文革的著名艺术家](../../pages/nsc1028/n13229461.md) 
 #### [【名家专栏】不太惬意的夏日时光](../../pages/nsc1028/n13226398.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（7）](../../pages/nsc1028/n13227610.md) 
@@ -29,7 +30,6 @@
 #### [中共罪行录之四十六：红歌作者的悲惨结果](../../pages/nsc1028/n13172779.md) 
 #### [王友群：因毛泽东一句话 部长张霖之文革被打死](../../pages/nsc1028/n13161711.md) 
 #### [袁斌：罗素对“俄国革命”的洞见](../../pages/nsc1028/n13159737.md) 
-#### [王友群：北京大学一级教授向达文革被迫害致死](../../pages/nsc1028/n13150966.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
