--- a/indexes/nsc993/62.md
+++ b/indexes/nsc993/62.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】只有最红色的血才是免死牌](../../pages/nsc993/n13235593.md) 
 #### [【网海拾贝】外资外迁潮迭起，李光满们该满意了吧？](../../pages/nsc993/n13232287.md) 
 #### [【网海拾贝】“一微两制”意在阻断信息交流](../../pages/nsc993/n13229519.md) 
 #### [理悟：清除撒旦华夏归](../../pages/nsc993/n13229501.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】疫苗无人担责 一切后果都由个人承担](../../pages/nsc993/n13197255.md) 
 #### [金浴凤：红色基因赋](../../pages/nsc993/n13197155.md) 
 #### [【网海拾贝】“电话哥”死磕当局 “双码联查”叫停](../../pages/nsc993/n13194888.md) 
-#### [看“孔融让梨”想起小时经历的大饥荒年代](../../pages/nsc993/n13195778.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
