have a nice day!

--- a/indexes/nsc1025/130.md
+++ b/indexes/nsc1025/130.md
@@ -1,5 +1,14 @@
 ### 纪元评论：时政评论
 ---
+#### [夏林：最后一场联邦大选辩论：党领对中共的态度](../../pages/nsc1025/n13239590.md) 
+#### [【有冇搞错】恒大启示 谁“共同”了谁的富裕？](../../pages/nsc1025/n13237005.md) 
+#### [杨威：中美都否认首脑会晤 关系有多差？](../../pages/nsc1025/n13237533.md) 
+#### [王友群：中共意识形态总管王沪宁哪里去了？](../../pages/nsc1025/n13236838.md) 
+#### [周晓辉：解读美最高将领被曝秘电北京](../../pages/nsc1025/n13236873.md) 
+#### [金言：飞来恒祸——中国雷曼时刻降临](../../pages/nsc1025/n13236993.md) 
+#### [【名家专栏】我的母校是共产主义训练营吗？](../../pages/nsc1025/n13236114.md) 
+#### [【名家专栏】关税保护美国产业不受中共影响](../../pages/nsc1025/n13236146.md) 
+#### [【名家专栏】日台2+2安全会谈是历史性突破](../../pages/nsc1025/n13236127.md) 
 #### [房企老大陷危境，中国房产业的危机信号？](../../pages/nsc1025/n13236853.md) 
 #### [陈思敏：恒大债务危机背后隐藏几多博弈](../../pages/nsc1025/n13235644.md) 
 #### [李正宽：天安门黑天鹅与恒大持续暴雷](../../pages/nsc1025/n13235516.md) 
@@ -21,15 +30,6 @@
 #### [颜丹： 香港议员拒宣誓与大陆官员非正常死亡](../../pages/nsc1025/n13229626.md) 
 #### [慕岳：拜习通话 中共现四大战略误判](../../pages/nsc1025/n13229335.md) 
 #### [王友群：重庆前副市长邓恢林跟谁搞团团伙伙？](../../pages/nsc1025/n13228367.md) 
-#### [沈舟：日本对中共军力的最新评估](../../pages/nsc1025/n13228735.md) 
-#### [【名家专栏】对中共说不的两个国家](../../pages/nsc1025/n13227986.md) 
-#### [杨威：9‧11二十年后 中美关系待重新定义](../../pages/nsc1025/n13228383.md) 
-#### [唐青：午夜密谋 孙政才夺权折戟内幕](../../pages/nsc1025/n13228343.md) 
-#### [【名家专栏】罢免选举或能逆转加州意识形态](../../pages/nsc1025/n13227966.md) 
-#### [【名家专栏】反思9‧11带来的错觉](../../pages/nsc1025/n13227970.md) 
-#### [王友群：吉林法官的狂言曝中共司法深度黑暗](../../pages/nsc1025/n13226841.md) 
-#### [中共南部战区有能力维持南海扩张吗？](../../pages/nsc1025/n13227384.md) 
-#### [何清涟：习近平的红色回归并非闭关锁国](../../pages/nsc1025/n13227052.md) 
 
 ---
 #### 第 [ [130](./130.md) / [129](./129.md) / [128](./128.md) / [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) ] 页
