--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [周傥：共产党统治下绝没有自由——记胡适和陈垣的一段历史公案](../../pages/nsc1028/n13238349.md) 
+#### [袁斌：我们从小到大学到的历史哪些是假的（8）](../../pages/nsc1028/n13238181.md) 
 #### [王友群：1975年河南溃坝23万人死亡之谜](../../pages/nsc1028/n13231576.md) 
 #### [中共罪行录之五十一：死于文革的著名艺术家](../../pages/nsc1028/n13229461.md) 
 #### [【名家专栏】不太惬意的夏日时光](../../pages/nsc1028/n13226398.md) 
@@ -28,8 +30,6 @@
 #### [中共罪行录之四十八：死囚家属学习班](../../pages/nsc1028/n13177975.md) 
 #### [中共罪行录之四十七：被割喉的张志新们](../../pages/nsc1028/n13175568.md) 
 #### [中共罪行录之四十六：红歌作者的悲惨结果](../../pages/nsc1028/n13172779.md) 
-#### [王友群：因毛泽东一句话 部长张霖之文革被打死](../../pages/nsc1028/n13161711.md) 
-#### [袁斌：罗素对“俄国革命”的洞见](../../pages/nsc1028/n13159737.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
