have a nice day!

--- a/indexes/nsc1025/130.md
+++ b/indexes/nsc1025/130.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [石铭：中秋月圆家难圆 善良民众期盼着迫害早日结束](../../pages/nsc1025/n13242648.md) 
+#### [周晓辉：习直指政法系高层 未遂刺杀案透玄机](../../pages/nsc1025/n13242464.md) 
+#### [颜丹：“女检察官网络炫富”被辟谣的背后](../../pages/nsc1025/n13242440.md) 
+#### [【名家专栏】反种族主义的错误理由](../../pages/nsc1025/n13241715.md) 
+#### [【名家专栏】疫情冲击中共“一带一路”](../../pages/nsc1025/n13241656.md) 
 #### [【名家专栏】恒大违约恐动摇整个中国经济](../../pages/nsc1025/n13241783.md) 
 #### [谢田：恒大危机最坏和更坏的结局](../../pages/nsc1025/n13240888.md) 
 #### [袁斌：秦刚一声“闭嘴”警醒了国际社会什么？](../../pages/nsc1025/n13240851.md) 
@@ -25,11 +30,6 @@
 #### [周晓辉：王朝末年多异象 红朝完结有迹可寻](../../pages/nsc1025/n13234147.md) 
 #### [【纪元专栏】加拿大无限期下半旗是政治鲁莽举动](../../pages/nsc1025/n13234488.md) 
 #### [【名家专栏】美中气候谈判 必须回到正轨](../../pages/nsc1025/n13233606.md) 
-#### [【名家专栏】美国应支持欧盟以对抗中共](../../pages/nsc1025/n13233515.md) 
-#### [【名家专栏】聪明的投资人正在逃离中国](../../pages/nsc1025/n13232898.md) 
-#### [颜丹：从美国撒旦教信徒抗议“反堕胎法”说起](../../pages/nsc1025/n13234093.md) 
-#### [【有冇搞错】罢免纽森投票 美国政治正重新平衡](../../pages/nsc1025/n13231358.md) 
-#### [【名家专栏】中共的“盾牌加长矛”战略](../../pages/nsc1025/n13230258.md) 
 
 ---
 #### 第 [ [130](./130.md) / [129](./129.md) / [128](./128.md) / [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) ] 页
