--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [袁斌：我们从小到大学到的历史哪些是假的（9）](../../pages/nsc1028/n13243175.md) 
 #### [周傥：共产党统治下绝没有自由——记胡适和陈垣的一段历史公案](../../pages/nsc1028/n13238349.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（8）](../../pages/nsc1028/n13238181.md) 
 #### [王友群：1975年河南溃坝23万人死亡之谜](../../pages/nsc1028/n13231576.md) 
@@ -29,7 +30,6 @@
 #### [王友群：毛泽东发动大跃进 饿死四千万人](../../pages/nsc1028/n13177158.md) 
 #### [中共罪行录之四十八：死囚家属学习班](../../pages/nsc1028/n13177975.md) 
 #### [中共罪行录之四十七：被割喉的张志新们](../../pages/nsc1028/n13175568.md) 
-#### [中共罪行录之四十六：红歌作者的悲惨结果](../../pages/nsc1028/n13172779.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
