--- a/indexes/nsc1035/52.md
+++ b/indexes/nsc1035/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [林青：又到中秋月圆时 多少游子泪湿襟](../../pages/nsc1035/n13245916.md) 
 #### [《抓捕》影评：危难关头，敢不敢拔刀相助](../../pages/nsc1035/n13244251.md) 
 #### [《抉择》影评——每个情节都来自真实的中国](../../pages/nsc1035/n13242564.md) 
 #### [宋紫凤：疫情中的这一家 剧本外的你我他](../../pages/nsc1035/n13242358.md) 
@@ -29,7 +30,6 @@
 #### [李田田：减压式生活未必就是消极堕落，由国之大考所想到的](../../pages/nsc1035/n13017621.md) 
 #### [教育家为何担心个人主义衰败胜过原子弹？](../../pages/nsc1035/n13002969.md) 
 #### [李田田：成人化的“儿童节”真的童趣盎然吗？](../../pages/nsc1035/n13000386.md) 
-#### [清竹：超凡入圣的绘画震撼了我的心](../../pages/nsc1035/n12993985.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
