--- a/indexes/nsc993/62.md
+++ b/indexes/nsc993/62.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [中秋赏月共婵娟 咏月诗词同欣赏](../../pages/nsc993/n13245718.md) 
+#### [无言：盛世的代价](../../pages/nsc993/n13246214.md) 
 #### [【网海拾贝】前所未有强硬，日本给北京划红线](../../pages/nsc993/n13243236.md) 
 #### [【网海拾贝】瑞士不惧中共的威胁](../../pages/nsc993/n13241090.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13241022.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】美国最大规模演习发出的讯号](../../pages/nsc993/n13207637.md) 
 #### [【网海拾贝】西方对中共的误判与中共对西方的误判](../../pages/nsc993/n13204854.md) 
 #### [国学大师季羡林关于文革的四个“天问”](../../pages/nsc993/n13204917.md) 
-#### [【网海拾贝】“有钱的缺良心，有良心的缺钱”](../../pages/nsc993/n13202291.md) 
-#### [袁斌：“蔡莉去哪了？” 答案来了](../../pages/nsc993/n13199329.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
