--- a/indexes/nsc993/62.md
+++ b/indexes/nsc993/62.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [中国版“不能呼吸” 网民：“华大妈怎么看？”](../../pages/nsc993/n13249667.md) 
+#### [理悟：中秋望月思故乡](../../pages/nsc993/n13248670.md) 
+#### [【网海拾贝】美日印澳四方紧掐北京七寸](../../pages/nsc993/n13247358.md) 
 #### [中秋赏月共婵娟 咏月诗词同欣赏](../../pages/nsc993/n13245718.md) 
 #### [无言：盛世的代价](../../pages/nsc993/n13246214.md) 
 #### [【网海拾贝】前所未有强硬，日本给北京划红线](../../pages/nsc993/n13243236.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】习近平可能被宫廷政变推翻吗？](../../pages/nsc993/n13209876.md) 
 #### [李春草：卜算子·韭菜花](../../pages/nsc993/n13209894.md) 
 #### [祝君安：文革来了，卸磨还会远吗？](../../pages/nsc993/n13209892.md) 
-#### [【网海拾贝】美国最大规模演习发出的讯号](../../pages/nsc993/n13207637.md) 
-#### [【网海拾贝】西方对中共的误判与中共对西方的误判](../../pages/nsc993/n13204854.md) 
-#### [国学大师季羡林关于文革的四个“天问”](../../pages/nsc993/n13204917.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
