--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之五十三：“文革”中被逼自杀的科学家](../../pages/nsc1028/n13249512.md) 
+#### [林辉：江青文艺界三大走卒之悲剧人生](../../pages/nsc1028/n13248164.md) 
+#### [中共罪行录之五十二：以革命的名义杀人](../../pages/nsc1028/n13247326.md) 
 #### [林辉：王洪文两个“没想到” 遭酷刑被关秦城](../../pages/nsc1028/n13244136.md) 
 #### [王友群：傅作义身边的中共间谍阎又文](../../pages/nsc1028/n13244038.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（9）](../../pages/nsc1028/n13243175.md) 
@@ -27,9 +30,6 @@
 #### [百年大梦：2021 终点](../../pages/nsc1028/n13190519.md) 
 #### [【名家专栏】不能加入私人俱乐部背后的怨恨](../../pages/nsc1028/n13186855.md) 
 #### [我们从小到大学到的历史哪些是假的（2）](../../pages/nsc1028/n13186560.md) 
-#### [我们从小到大学到的历史哪些是假的（1）](../../pages/nsc1028/n13181650.md) 
-#### [观雨堂主：红色鹰犬的下场](../../pages/nsc1028/n13180822.md) 
-#### [王友群：毛泽东发动大跃进 饿死四千万人](../../pages/nsc1028/n13177158.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
