have a nice day!

--- a/indexes/nsc1025/132.md
+++ b/indexes/nsc1025/132.md
@@ -1,5 +1,14 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】我们正在为美国灵魂而战](../../pages/nsc1025/n13253064.md) 
+#### [夏林：疫苗之战 打还是不打？这是个主要问题](../../pages/nsc1025/n13253510.md) 
+#### [李遨：月到中秋 港人的死别·生离 2019至21年](../../pages/nsc1025/n13248553.md) 
+#### [李容：中共国的运动会 只有冠军才是硬道理](../../pages/nsc1025/n13248155.md) 
+#### [李正宽：中南海暗潮汹涌 习近平铁拳砸向谁？](../../pages/nsc1025/n13252068.md) 
+#### [王赫：国际经济规范正对中共“硬起来”](../../pages/nsc1025/n13251551.md) 
+#### [杨威：拜登习近平联大交锋预示的中美关系](../../pages/nsc1025/n13251471.md) 
+#### [郝平：恒大VS“共富”——原富背后的共产原罪](../../pages/nsc1025/n13251689.md) 
+#### [钟原：中共人大制度现香港 让世界看清其野心](../../pages/nsc1025/n13250562.md) 
 #### [王友群：反活摘器官世界峰会聚焦中共暴行](../../pages/nsc1025/n13250738.md) 
 #### [宋征时：中南海一号保镖周洪许其人其事（1）](../../pages/nsc1025/n13251206.md) 
 #### [【名家专栏】中共势力减弱 美应赢回委内瑞拉](../../pages/nsc1025/n13250064.md) 
@@ -21,15 +30,6 @@
 #### [【网海拾贝】中共对内对外两幅面孔？](../../pages/nsc1025/n13244853.md) 
 #### [【名家专栏】专制主义对美国造成威胁](../../pages/nsc1025/n13243827.md) 
 #### [【名家专栏】年轻人眼中的阿富汗灾难](../../pages/nsc1025/n13243817.md) 
-#### [中共北部战区面对三个方向的防御捉襟见肘](../../pages/nsc1025/n13245425.md) 
-#### [【名家专栏】疫苗通行证助长仇恨](../../pages/nsc1025/n13243695.md) 
-#### [千百度：中共手段邪恶 企图让敢言者变成“听话的狗”](../../pages/nsc1025/n13244811.md) 
-#### [袁斌：政法高官行刺中共领导人案件的三大疑团](../../pages/nsc1025/n13244763.md) 
-#### [王赫：“AUKUS”是重塑印太格局重要一步](../../pages/nsc1025/n13244347.md) 
-#### [钟原：各方插手阿富汗事务 中共难填空白](../../pages/nsc1025/n13244218.md) 
-#### [【名家专栏】中共经济胁迫的豪赌正在失败](../../pages/nsc1025/n13241762.md) 
-#### [金言：恒大“超越特斯拉”的牛皮成笑话](../../pages/nsc1025/n13244079.md) 
-#### [【名家专栏】澳英美新战略联盟加强民主](../../pages/nsc1025/n13243809.md) 
 
 ---
-#### 第 [ [131](./131.md) / [130](./130.md) / [129](./129.md) / [128](./128.md) / [127](./127.md) / [126](./126.md) / [125](./125.md) / [124](./124.md) ] 页
+#### 第 [ [132](./132.md) / [131](./131.md) / [130](./130.md) / [129](./129.md) / [128](./128.md) / [127](./127.md) / [126](./126.md) / [125](./125.md) ] 页
