--- a/indexes/nsc993/62.md
+++ b/indexes/nsc993/62.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】互联网自由度中国连续七年垫底](../../pages/nsc993/n13252244.md) 
+#### [【网海拾贝】原想甩锅国外 没想甩到自己头上了](../../pages/nsc993/n13249727.md) 
 #### [中国版“不能呼吸” 网民：“华大妈怎么看？”](../../pages/nsc993/n13249667.md) 
 #### [理悟：中秋望月思故乡](../../pages/nsc993/n13248670.md) 
 #### [【网海拾贝】美日印澳四方紧掐北京七寸](../../pages/nsc993/n13247358.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】中国富豪疯狂捐款的背后](../../pages/nsc993/n13211297.md) 
 #### [田雨木：从最新科学测试看辩证唯物主义之谬](../../pages/nsc993/n13210926.md) 
 #### [【网海拾贝】习近平可能被宫廷政变推翻吗？](../../pages/nsc993/n13209876.md) 
-#### [李春草：卜算子·韭菜花](../../pages/nsc993/n13209894.md) 
-#### [祝君安：文革来了，卸磨还会远吗？](../../pages/nsc993/n13209892.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
