--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共是怎么为自己涂脂抹粉的（1）](../../pages/nsc1028/n13257311.md) 
+#### [袁斌：我们从小到大学到的历史哪些是假的（10）](../../pages/nsc1028/n13252177.md) 
 #### [中共罪行录之五十三：“文革”中被逼自杀的科学家](../../pages/nsc1028/n13249512.md) 
 #### [林辉：江青文艺界三大走卒之悲剧人生](../../pages/nsc1028/n13248164.md) 
 #### [中共罪行录之五十二：以革命的名义杀人](../../pages/nsc1028/n13247326.md) 
@@ -28,8 +30,6 @@
 #### [百年红祸 中华“亡国”](../../pages/nsc1028/n13192762.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（3）](../../pages/nsc1028/n13193945.md) 
 #### [百年大梦：2021 终点](../../pages/nsc1028/n13190519.md) 
-#### [【名家专栏】不能加入私人俱乐部背后的怨恨](../../pages/nsc1028/n13186855.md) 
-#### [我们从小到大学到的历史哪些是假的（2）](../../pages/nsc1028/n13186560.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
